--- a/src/main/resources/USCIS_Forms/i-129f.properties
+++ b/src/main/resources/USCIS_Forms/i-129f.properties
@@ -1,7 +1,7 @@
 form1[0].#subform[0].Line3_ANumber[0].Line3_AlienNumber[0] = 
 form1[0].#subform[0].Line1a_FamilyName[0] = lastName
 form1[0].#subform[0].Line1b_GivenName[0] = firstName
-form1[0].#subform[0].Line1c_MiddleName[0] = middleName
+form1[0].#subform[0].Line1c_MiddleName[0] = 
 form1[0].#subform[0].Line7_male[0] = male
 form1[0].#subform[0].Line7_female[0] = female
 form1[0].#subform[0].Line4_CityTownOfBirth[0] = 
@@ -12,12 +12,12 @@ form1[0].#subform[0].Line8_Married[0] =
 form1[0].#subform[0].Line2a_InCareOfName[0] = 
 form1[0].#subform[0].Line5_CountryOfBirth[0] = countryOfBirth
 form1[0].#subform[0].Line2d_CityTown[0] = 
-form1[0].#subform[0].Line2b_StreetNumberName[0] = 
+form1[0].#subform[0].Line2b_StreetNumberName[0] = address
 form1[0].#subform[0].Line2c_Unit[0] = 
 form1[0].#subform[0].Line2c_Unit[1] = 
 form1[0].#subform[0].Line2c_AptSteFlrNumber[0] = 
 form1[0].#subform[0].Line2c_Unit[2] = 
-form1[0].#subform[0].Line6_DateofBirth[0] = birthdate
+form1[0].#subform[0].Line6_DateofBirth[0] = dateOfBirth
 form1[0].#subform[0].Line2i_Country[0] = 
 form1[0].#subform[0].Line2h_Province[0] = 
 form1[0].#subform[0].Line2g_PostalCode[0] = 
@@ -26,16 +26,16 @@ form1[0].#subform[0].Line2e_State[0] =
 form1[0].#subform[0].Line9a_FamilyName[0] = 
 form1[0].#subform[0].Line9b_GivenName[0] = 
 form1[0].#subform[0].Line9c_MiddleName[0] = 
-form1[0].#subform[0].Line10_SSN[0] = ssn
+form1[0].#subform[0].Line10_SSN[0] = socialSecurityNumber
 form1[0].#subform[0].Line11a_FamilyName[0] = 
 form1[0].#subform[0].Line11b_GivenName[0] = 
 form1[0].#subform[0].Line11c_MiddleName[0] = 
 form1[0].#subform[0].Line11d_DateMarriageEnded[0] = 
 form1[0].#subform[0].Line12a_FamilyName_Spouse[0] = 
 form1[0].#subform[0].Line12b_GivenName_Spouse[0] = 
-form1[0].#subform[1].Line13a[0] = citizenBorn
-form1[0].#subform[1].Line13b[0] = citizenNaturalized
-form1[0].#subform[1].Line13c[0] = citizenParents
+form1[0].#subform[1].Line13a[0] = 
+form1[0].#subform[1].Line13b[0] = 
+form1[0].#subform[1].Line13c[0] = 
 form1[0].#subform[1].Line1_K[0] = 
 form1[0].#subform[1].Line1_K[1] = 
 form1[0].#subform[1].Line13d1_CertificateNumber[0] = 
@@ -49,7 +49,7 @@ form1[0].#subform[1].Line14d_MiddleName[0] =
 form1[0].#subform[1].Line14f_CityOrTown[0] = 
 form1[0].#subform[1].Line14h_Result[0] = 
 form1[0].#subform[1].Part2Line2a_FamilyName[0] = 
-form1[0].#subform[1].Part2Line2b_GivenName[0] = 
+form1[0].#subform[1].Part2Line2b_GivenName[0] = spouseName
 form1[0].#subform[1].Part2Line2c_MiddleName[0] = 
 form1[0].#subform[1].Line13d3_DateOfIssuance[0] = 
 form1[0].#subform[1].Line14e_DateOfFiling[0] = 
@@ -77,7 +77,7 @@ form1[0].#subform[1].Line9_Single[0] =
 form1[0].#subform[1].Line9_Married[0] = 
 form1[0].#subform[1].Line5_CountryofBirth[0] = 
 form1[0].#subform[1].Line7_CountryOfCitizenship[0] = 
-form1[0].#subform[1].Line6_DateOfBirth[0] = 
+form1[0].#subform[1].Line6_DateOfBirth[0] = spouseDateOfBirth
 form1[0].#subform[1].Line13d_Yes[0] = 
 form1[0].#subform[1].Line13d_No[0] = 
 form1[0].#subform[1].Line10a_FamilyName[0] = 
@@ -241,5 +241,5 @@ form1[0].#subform[5].Line5g_Province[0] =
 form1[0].#subform[5].Line5f_PostalCode[0] = 
 form1[0].#subform[5].Line5h_Country[0] = 
 form1[0].#subform[5].Line2_DaytimePhoneNumber1[0] = 
-form1[0].#subform[5].Line3_MobilePhoneNumber1[0] = 
+form1[0].#subform[5].Line3_MobilePhoneNumber1[0] = mobilePhoneNumber
 form1[0].#subform[5].Line3_DaytimePhoneNumber1[0] = 
