--- a/src/main/resources/USCIS_Forms/i-129f.properties
+++ b/src/main/resources/USCIS_Forms/i-129f.properties
@@ -17,7 +17,7 @@ form1[0].#subform[0].Line2c_Unit[0] =
 form1[0].#subform[0].Line2c_Unit[1] = 
 form1[0].#subform[0].Line2c_AptSteFlrNumber[0] = 
 form1[0].#subform[0].Line2c_Unit[2] = 
-form1[0].#subform[0].Line6_DateofBirth[0] = dateOfBirth
+form1[0].#subform[0].Line6_DateofBirth[0] = dateOfBirthStr
 form1[0].#subform[0].Line2i_Country[0] = 
 form1[0].#subform[0].Line2h_Province[0] = 
 form1[0].#subform[0].Line2g_PostalCode[0] = 
@@ -77,7 +77,7 @@ form1[0].#subform[1].Line9_Single[0] =
 form1[0].#subform[1].Line9_Married[0] = 
 form1[0].#subform[1].Line5_CountryofBirth[0] = 
 form1[0].#subform[1].Line7_CountryOfCitizenship[0] = 
-form1[0].#subform[1].Line6_DateOfBirth[0] = spouseDateOfBirth
+form1[0].#subform[1].Line6_DateOfBirth[0] = spouseDateOfBirthStr
 form1[0].#subform[1].Line13d_Yes[0] = 
 form1[0].#subform[1].Line13d_No[0] = 
 form1[0].#subform[1].Line10a_FamilyName[0] = 
@@ -100,11 +100,11 @@ form1[0].#subform[2].Line14d_DateMarriageEnded[0] =
 form1[0].#subform[2].Line15c_DateofArrival[0] = 
 form1[0].#subform[2].Line15d_DateExpired[0] = 
 form1[0].#subform[2].Line16a_FamilyName[0] = 
-form1[0].#subform[2].Line16b_GivenName[0] = 
+form1[0].#subform[2].Line16b_GivenName[0] = spouseKid1
 form1[0].#subform[2].Line16c_MiddleName[0] = 
 form1[0].#subform[2].Line17_CountryOfBirth[0] = 
 form1[0].#subform[2].Line20a_FamilyName[0] = 
-form1[0].#subform[2].Line20b_GivenName[0] = 
+form1[0].#subform[2].Line20b_GivenName[0] = spouseKid2
 form1[0].#subform[2].Line20c_MiddleName[0] = 
 form1[0].#subform[2].Line21_CountryOfBirth[0] = 
 form1[0].#subform[2].Line18_DateofBirth[0] = 
@@ -136,7 +136,7 @@ form1[0].#subform[2].Line15f_TravelDoc[0] =
 form1[0].#subform[2].Line15g_CountryOfIssuance[0] = 
 form1[0].#subform[2].Line15h_ExpDate[0] = 
 form1[0].#subform[3].Line24a_FamilyName[0] = 
-form1[0].#subform[3].Line24b_GivenName[0] = 
+form1[0].#subform[3].Line24b_GivenName[0] = spouseKid3
 form1[0].#subform[3].Line24c_MiddleName[0] = 
 form1[0].#subform[3].Line25_CountryofBirth[0] = 
 form1[0].#subform[3].Line26_DateofBirth[0] = 
